Changed chatView to chat_view.

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <div id="page">
 
     <div id="panel">
-      <div id="chatView"></div>
+      <div id="chat_view"></div>
       <div>
         <input id="chat_input" type="text" value=""
           onKeyPress="if(event.which==13){sendChat();return false}return true"/>
