--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" type="text/css" href="main.css"/>
+  <link rel="stylesheet" href="main.css"/>
   <title>Websocket Chat Room</title>
 </head>
 <body onload="start()">
